Started to add folder dialog

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,6 +32,7 @@
                 <div state="unchecked" onclick="checkboxClicked('chk02')" class="checkbox-unchecked" id="chk02"></div>
                 <span for="chk02">Use custom installation folder</span>
                 <input type="text" class="folder">
+                <button onclick="selectFolder()">select folder</button>
             </div>
             
         </fieldset>
